--- a/gkpubs.bib
+++ b/gkpubs.bib
@@ -2821,3 +2821,56 @@
   year={2017},
   publisher={American Association for the Advancement of Science}
 }
+@article{KanVelBar23,
+  title={Analyze the attentive and bypass bias: Mock vignette checks in survey experiments},
+  author={Kane, John V and Velez, Yamil R and Barabas, Jason},
+  journal={Political Science Research and Methods},
+  volume={11},
+  number={2},
+  pages={293--310},
+  year={2023},
+  publisher={Cambridge University Press}
+}
+@article{ReaWolBer22,
+  title={Racing the clock: Using response time as a proxy for attentiveness on self-administered surveys},
+  author={Read, Blair and Wolters, Lukas and Berinsky, Adam J},
+  journal={Political Analysis},
+  volume={30},
+  number={4},
+  pages={550--569},
+  year={2022}
+}
+@article{KanCos24,
+  title={Being Careful with Conjoints: Accounting for Inattentiveness in Conjoint Experiments},
+  author={Kane, John V and Costa, Mia},
+  year={2024}
+}
+@article{AroBarPin2019,
+  title={A note on dropping experimental subjects who fail a manipulation check},
+  author={Aronow, Peter M and Baron, Jonathon and Pinson, Lauren},
+  journal={Political Analysis},
+  volume={27},
+  number={4},
+  pages={572--589},
+  year={2019},
+  publisher={Cambridge University Press}
+}
+@article{Varaine23,
+  title={How dropping subjects who failed manipulation checks can bias your results: An illustrative case},
+  author={Varaine, Simon},
+  journal={Journal of Experimental Political Science},
+  volume={10},
+  number={2},
+  pages={299--305},
+  year={2023}
+}
+
+@article{Weinstein18,
+  title={Mind-wandering, how do I measure thee with probes? Let me count the ways},
+  author={Weinstein, Yana},
+  journal={Behavior research methods},
+  volume={50},
+  pages={642--661},
+  year={2018},
+  publisher={Springer}
+}
