--- a/gk.bib
+++ b/gk.bib
@@ -31812,3 +31812,10 @@ year = {2025}
   pages={17},
   year={2024}
 }
+@book{croallzac23,
+  title        = {Guide to DHS Statistics},
+  author       = {Croft, Trevor N. and Allen, Courtney K. and Zachary, Blake W.},
+  year         = {2023},
+  publisher    = {ICF},
+  address      = {Rockville, Maryland, USA}
+}
