--- a/gk.bib
+++ b/gk.bib
@@ -31812,3 +31812,11 @@ year = {2025}
   pages={17},
   year={2024}
 }
+@article{rutstein2006guide,
+  title={Guide to DHS statistics},
+  author={Rutstein, Shea Oscar and Rojas, Guillermo and others},
+  journal={Calverton, MD: ORC Macro},
+  volume={38},
+  pages={78},
+  year={2006}
+}
