--- a/gk.bib
+++ b/gk.bib
@@ -31819,3 +31819,28 @@ year = {2025}
   publisher    = {ICF},
   address      = {Rockville, Maryland, USA}
 }
+@article{mikkelsen2015global,
+  title={A global assessment of civil registration and vital statistics systems: monitoring data quality and progress},
+  author={Mikkelsen, Lene and Phillips, David E and AbouZahr, Carla and Setel, Philip W and De Savigny, Don and Lozano, Rafael and Lopez, Alan D},
+  journal={The Lancet},
+  volume={386},
+  number={10001},
+  pages={1395--1406},
+  year={2015},
+  publisher={Elsevier}
+}
+@book{moultrie2013tools,
+  title={Tools for demographic estimation},
+  author={Moultrie, Tom A and Dorrington, Rob E and Hill, Allan G and Hill, Kenneth and Tim{\ae}us, Ian M and Zaba, Basia},
+  year={2013},
+  publisher={International Union for the Scientific Study of Population}
+}
+@article{pison2018estimating,
+  title={Estimating mortality from external causes using data from retrospective surveys: A validation study in Niakhar (Senegal)},
+  author={Pison, Gilles and Duth{\'e}, G{\'e}raldine and Masquelier, Bruno and Sokhna, Cheikh and Kante, Almamy Malick and Delaunay, Val{\'e}rie and Ndiaye, Cheikh Tidiane and Helleringer, St{\'e}phane and Douillot, Laetitia},
+  journal={Demographic Research},
+  volume={38},
+  pages={879--896},
+  year={2018},
+  publisher={JSTOR}
+}
