--- a/gk.bib
+++ b/gk.bib
@@ -31844,3 +31844,23 @@ year = {2025}
   year={2018},
   publisher={JSTOR}
 }
+@article{wagner2019women,
+  title={Women and children living in areas of armed conflict in Africa: a geospatial analysis of mortality and orphanhood},
+  author={Wagner, Zachary and Heft-Neal, Sam and Wise, Paul H and Black, Robert E and Burke, Marshall and Boerma, Ties and Bhutta, Zulfiqar A and Bendavid, Eran},
+  journal={The Lancet Global Health},
+  volume={7},
+  number={12},
+  pages={e1622--e1631},
+  year={2019},
+  publisher={Elsevier}
+}
+@article{obermeyer2010measuring,
+  title={Measuring adult mortality using sibling survival: a new analytical method and new results for 44 countries, 1974--2006},
+  author={Obermeyer, Ziad and Rajaratnam, Julie Knoll and Park, Chang H and Gakidou, Emmanuela and Hogan, Margaret C and Lopez, Alan D and Murray, Christopher JL},
+  journal={PLoS medicine},
+  volume={7},
+  number={4},
+  pages={e1000260},
+  year={2010},
+  publisher={Public Library of Science San Francisco, USA}
+}
