--- a/gk.bib
+++ b/gk.bib
@@ -31864,3 +31864,21 @@ year = {2025}
   year={2010},
   publisher={Public Library of Science San Francisco, USA}
 }
+@article{hill2006should,
+  title={How should we measure maternal mortality in the developing world? A comparison of household deaths and sibling history approaches},
+  author={Hill, Kenneth and El Arifeen, Shams and Koenig, Michael and Al-Sabir, Ahmed and Jamil, Kanta and Raggers, Han},
+  journal={Bulletin of the World Health Organization},
+  volume={84},
+  number={3},
+  pages={173--180},
+  year={2006},
+  publisher={SciELO Public Health}
+}
+@article{hanley1996confidence,
+  title={Confidence intervals and sample-size calculations for the sisterhood method of estimating maternal mortality},
+  author={Hanley, James A and Hagen, Catherine A and Shiferaw, Tesfaye},
+  journal={Studies in Family Planning},
+  pages={220--227},
+  year={1996},
+  publisher={JSTOR}
+}
