--- a/gk.bib
+++ b/gk.bib
@@ -31934,3 +31934,12 @@ year = {2025}
   year={2018},
   publisher={Springer}
 }
+@article{GibSte23,
+  title = {Strategic Reporting: A Formal Model of Biases in Conflict Data},
+  author = {Gibilisco, Michael and Steinberg, Jessica},
+  journal = apsr,  
+  volume = {117},
+  number = {4},
+  pages = {1291--1307},
+  year = {2023}
+}
