--- a/gk.bib
+++ b/gk.bib
@@ -31943,3 +31943,13 @@ year = {2025}
   pages = {1291--1307},
   year = {2023}
 }
+@article{weidmann2015accuracy,
+  title={On the accuracy of media-based conflict event data},
+  author={Weidmann, Nils B},
+  journal={Journal of Conflict Resolution},
+  volume={59},
+  number={6},
+  pages={1129--1149},
+  year={2015},
+  publisher={SAGE Publications Sage CA: Los Angeles, CA}
+}
