--- a/gk.bib
+++ b/gk.bib
@@ -31953,3 +31953,13 @@ year = {2025}
   year={2015},
   publisher={SAGE Publications Sage CA: Los Angeles, CA}
 }
+@article{weidmann2016closer,
+  title={A closer look at reporting bias in conflict event data},
+  author={Weidmann, Nils B},
+  journal={American Journal of Political Science},
+  volume={60},
+  number={1},
+  pages={206--218},
+  year={2016},
+  publisher={Wiley Online Library}
+}
