--- a/gk.bib
+++ b/gk.bib
@@ -31963,3 +31963,13 @@ year = {2025}
   year={2016},
   publisher={Wiley Online Library}
 }
+@article{davenport2002views,
+  title={Views to a kill: Exploring the implications of source selection in the case of Guatemalan state terror, 1977-1995},
+  author={Davenport, Christian and Ball, Patrick},
+  journal={Journal of conflict resolution},
+  volume={46},
+  number={3},
+  pages={427--450},
+  year={2002},
+  publisher={Sage Publications Sage CA: Los Angeles, CA}
+}
