--- a/gk.bib
+++ b/gk.bib
@@ -31973,3 +31973,13 @@ year = {2025}
   year={2002},
   publisher={Sage Publications Sage CA: Los Angeles, CA}
 }
+@article{spagat2024violent,
+  title={The violent death toll from the Iraq War: 2003--2023},
+  author={Spagat, Michael},
+  journal={Plos one},
+  volume={19},
+  number={2},
+  pages={e0297895},
+  year={2024},
+  publisher={Public Library of Science San Francisco, CA USA}
+}
