--- a/gk.bib
+++ b/gk.bib
@@ -31983,3 +31983,14 @@ year = {2025}
   year={2024},
   publisher={Public Library of Science San Francisco, CA USA}
 }
+
+@article{VanHum16,
+issn = {0022-0027},
+journal = {Journal of Conflict Resolution},
+pages = {748--781},
+volume = {60},
+number = {4},
+year = {2016},
+title = {Crowdseeding in Eastern Congo: Using Cell Phones to Collect Conflict Events Data in Real Time},
+author = {Van der Windt, Peter and Humphreys, Macartan}
+}
