--- a/gk.bib
+++ b/gk.bib
@@ -31994,3 +31994,13 @@ year = {2016},
 title = {Crowdseeding in Eastern Congo: Using Cell Phones to Collect Conflict Events Data in Real Time},
 author = {Van der Windt, Peter and Humphreys, Macartan}
 }
+
+@article{Eck12,
+journal = {Cooperation and conflict},
+pages = {124--141},
+volume = {47},
+number = {1},
+year = {2012},
+title = {In data we trust? A comparison of UCDP GED and ACLED conflict events datasets},
+author = {Eck, Kristine}
+}
