--- a/gk.bib
+++ b/gk.bib
@@ -32004,3 +32004,21 @@ year = {2012},
 title = {In data we trust? A comparison of UCDP GED and ACLED conflict events datasets},
 author = {Eck, Kristine}
 }
+@article{hout2016reliability,
+  title={Reliability of the core items in the General Social Survey: estimates from the three-wave panels, 2006--2014},
+  author={Hout, Michael and Hastings, Orestes P},
+  journal={Sociological Science},
+  volume={3},
+  pages={971--1002},
+  year={2016}
+}
+@Article{Brady93,
+  author =       {Henry E. Brady},
+  title =        {Why Wiley-Wiley Models Do Not Tell You Enough},
+  journal =      { },
+  year =         1993,
+  month =     {April},
+  note =      {Midwest Political Science Association, Chicago},
+}
+
+Paper presented to the annual meeting of the Midwest Political Science Association, Chicago, 111., April 9, 199
