--- a/gk.bib
+++ b/gk.bib
@@ -30872,7 +30872,7 @@ doi = {10.1126/science.adk3451},
   title={Journalism for development: the role of journalism promoting democracy and political accountability and sustainable development},
   author={Stiglitz, Joseph E and Schiffrin, Anya and Groves, Dylan W},
   year={2024},
-  publisher={UNESCO}
+  journal={UNESCO}
 }
 @article{larreguy2020publicising,
   title={Publicising malfeasance: when the local media structure facilitates electoral accountability in Mexico},
