--- a/gk.bib
+++ b/gk.bib
@@ -32020,3 +32020,13 @@ author = {Eck, Kristine}
   month =     {April},
   note =      {Midwest Political Science Association, Chicago},
 }
+@article{besley2006handcuffs,
+  title={Handcuffs for the grabbing hand? Media capture and government accountability},
+  author={Besley, Timothy and Prat, Andrea},
+  journal={American economic review},
+  volume={96},
+  number={3},
+  pages={720--736},
+  year={2006},
+  publisher={American Economic Association}
+}
