--- a/gk.bib
+++ b/gk.bib
@@ -32030,3 +32030,13 @@ author = {Eck, Kristine}
   year={2006},
   publisher={American Economic Association}
 }
+@article{mcdonnell2011benefits,
+  title={The benefits of noise in neural systems: bridging theory and experiment},
+  author={McDonnell, Mark D and Ward, Lawrence M},
+  journal={Nature Reviews Neuroscience},
+  volume={12},
+  number={7},
+  pages={415--425},
+  year={2011},
+  publisher={Nature Publishing Group UK London}
+}
