--- a/gk.bib
+++ b/gk.bib
@@ -32018,7 +32018,7 @@ author = {Eck, Kristine}
   journal =      { },
   year =         1993,
   month =     {April},
-  note =      {Midwest Political Science Association, Chicago},
+  note =      {Midwest Political Science Association, Chicago}
 }
 @article{besley2006handcuffs,
   title={Handcuffs for the grabbing hand? Media capture and government accountability},
