--- a/gk.bib
+++ b/gk.bib
@@ -32040,4 +32040,12 @@ author = {Eck, Kristine}
   year={2011},
   publisher={Nature Publishing Group UK London}
 }
- 
+@book{pirolli-2007-information-foraging,
+  author       = {Pirolli, Peter L. T.},
+  title        = {Information Foraging Theory: Adaptive Interaction with Information},
+  publisher    = {Oxford University Press},
+  address      = {New York, NY},
+  year         = {2007},
+  isbn         = {9780195173321, 0195173325},
+  url          = {https://academic.oup.com/book/7603},
+}
