--- a/gk.bib
+++ b/gk.bib
@@ -32046,6 +32046,5 @@ author = {Eck, Kristine}
   publisher    = {Oxford University Press},
   address      = {New York, NY},
   year         = {2007},
-  isbn         = {9780195173321, 0195173325},
-  url          = {https://academic.oup.com/book/7603},
+  url          = {https://academic.oup.com/book/7603}
 }
