--- a/gk.bib
+++ b/gk.bib
@@ -32040,3 +32040,13 @@ author = {Eck, Kristine}
   year={2011},
   publisher={Nature Publishing Group UK London}
 }
+@article{vasudevan2024modeling,
+  title={Modeling kinematic variability reveals displacement and velocity based dual control of saccadic eye movements},
+  author={Vasudevan, Varsha and Murthy, Aditya and Padhi, Radhakant},
+  journal={Experimental Brain Research},
+  volume={242},
+  number={9},
+  pages={2159--2176},
+  year={2024},
+  publisher={Springer}
+}
