--- a/gk.bib
+++ b/gk.bib
@@ -32050,3 +32050,13 @@ author = {Eck, Kristine}
   year={2024},
   publisher={Springer}
 }
+@article{alt1995computing,
+  title={Computing the Fr{\'e}chet distance between two polygonal curves},
+  author={Alt, Helmut and Godau, Michael},
+  journal={International Journal of Computational Geometry \& Applications},
+  volume={5},
+  number={01n02},
+  pages={75--91},
+  year={1995},
+  publisher={World Scientific}
+}
