--- a/gk.bib
+++ b/gk.bib
@@ -32017,7 +32017,7 @@ author = {Eck, Kristine}
   title =        {Why Wiley-Wiley Models Do Not Tell You Enough},
   journal =      { },
   year =         1993,
-  month =     {April},
+  month =     4,
   note =      {Midwest Political Science Association, Chicago}
 }
 @article{besley2006handcuffs,
