--- a/gk.bib
+++ b/gk.bib
@@ -32060,4 +32060,40 @@ author = {Eck, Kristine}
   year={1995},
   publisher={World Scientific}
 }
-
+@inproceedings{huang2012user,
+  title={User see, user point: gaze and cursor alignment in web search},
+  author={Huang, Jeff and White, Ryen and Buscher, Georg},
+  booktitle={Proceedings of the sigchi conference on human factors in computing systems},
+  pages={1341--1350},
+  year={2012}
+}
+@inproceedings{chen2001can,
+  title={What can a mouse cursor tell us more? Correlation of eye/mouse movements on web browsing},
+  author={Chen, Mon Chu and Anderson, John R and Sohn, Myeong Ho},
+  booktitle={CHI'01 extended abstracts on Human factors in computing systems},
+  pages={281--282},
+  year={2001}
+}
+@inproceedings{papoutsaki2015scalable,
+  title={Scalable webcam eye tracking by learning from user interactions},
+  author={Papoutsaki, Alexandra},
+  booktitle={Proceedings of the 33rd Annual ACM Conference Extended Abstracts on Human Factors in Computing Systems},
+  pages={219--222},
+  year={2015}
+}
+@article{yang2021webcam,
+  title={Webcam-based online eye-tracking for behavioral research},
+  author={Yang, Xiaozhi and Krajbich, Ian},
+  journal={Judgment and Decision making},
+  volume={16},
+  number={6},
+  pages={1485--1505},
+  year={2021},
+  publisher={Cambridge University Press}
+}
+@article{vos2022comparing,
+  title={Comparing infrared and webcam eye tracking in the visual world paradigm},
+  author={Vos, Myrte and Minor, Serge and Ramchand, Gillian C},
+  year={2022},
+  publisher={University of California Press}
+}
