--- a/gk.bib
+++ b/gk.bib
@@ -32097,3 +32097,13 @@ author = {Eck, Kristine}
   year={2022},
   publisher={University of California Press}
 }
+@article{tourangeau2021survey,
+  title={Survey reliability: models, methods, and findings},
+  author={Tourangeau, Roger},
+  journal={Journal of survey statistics and methodology},
+  volume={9},
+  number={5},
+  pages={961--991},
+  year={2021},
+  publisher={Oxford University Press}
+}
