--- a/gk.bib
+++ b/gk.bib
@@ -32097,3 +32097,13 @@ author = {Eck, Kristine}
   year={2022},
   publisher={University of California Press}
 }
+@article{stewart2006decision,
+  title={Decision by sampling},
+  author={Stewart, Neil and Chater, Nick and Brown, Gordon DA},
+  journal={Cognitive psychology},
+  volume={53},
+  number={1},
+  pages={1--26},
+  year={2006},
+  publisher={Elsevier}
+}
